Bug 1600430 - Observe changes to the full keyboard access system pref. r=emilio, a=jcristau

Differential Revision: https://phabricator.services.mozilla.com/D119680